# tflite-in-raspberry-pi-pico

OwnModule/: linearRegression.h5  linearRegression.tflite  main.py  predictionResult.py  tf2tflite.py  tflite_prediction.py
pico-tflmicro-main/: CMakeLists.txt
pico-tflmicro-main/examples/LinearRegression/: CMakeLists.txt
pico-tflmicro-main/examples/LinearRegression/tensorflow/: main.cpp  model_data.h
